# artifex

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  LICENSE.md  LICENSE_EE.md  README.md  evaluate.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
artifex/: __init__.py  config.py  utils.py
artifex/core/: __init__.py  _hf_patches.py  decorators.py  exceptions.py  log_shipper.py  models.py
artifex/core/decorators/: __init__.py  auto_validation.py  logging.py
artifex/evaluation/: __init__.py  evaluate.py
artifex/models/: __init__.py  base_model.py  binary_classification_model.py  classification_model.py  models.py  nclass_classification_model.py  regression_model.py
artifex/models/classification/: __init__.py  classification_model.py
artifex/models/emotion_detection/: __init__.py
artifex/models/guardrail/: __init__.py  models.py
artifex/models/intent_classifier/: __init__.py  models.py
artifex/models/named_entity_recignition/: __init__.py
artifex/models/named_entity_recognition/: __init__.py  named_entity_recognition.py
artifex/models/reranker/: __init__.py  reranker.py
artifex/models/sentiment_analysis/: __init__.py
artifex/models/text_anonymization/: __init__.py
artifex/models/text_summarization/: __init__.py  text_summarization.py
tests/: conftest.py  mocked_classes.py
tests/integration/emotion_detection/: test_ed__call__intgr.py  test_ed_train_intgr.py
tests/integration/guardrail/: test_gr__call__intgr.py  test_gr_train_intgr.py
tests/integration/intent_classifier/: test_ic__call__intgr.py  test_ic_train_intgr.py
tests/integration/llm_output_guardrail/: test_llog__call__intgr.py  test_llog_train_intgr.py
tests/integration/multi_label_classification/: test_mlc_intgr.py
tests/integration/named_entity_recognition/: test_ner__call__intgr.py  test_ner_train_intgr.py
tests/integration/reranker/: test_rr__call__intgr.py  test_rr_train_intgr.py
tests/integration/sentiment_analysis/: test_sa__call__.py  test_sa_train_intgr.py
tests/integration/spam_detection/: test_sd__call__intgr.py  test_sd_train_intgr.py
tests/integration/text_anonymization/: test_ta__call__.py  test_ta__call__intgr.py  test_ta_train_intgr.py
tests/integration/text_classification/: test_tc__call__intgr.py  test_tc_train_intgr.py
tests/integration/text_summarization/: test_ts__call__intgr.py  test_ts_train_intgr.py
tests/integration/threat_detection/: test_td__call__intgr.py  test_td_train_intgr.py
tests/integration/topic_classification/: test_toc__call__intgr.py  test_toc_train_intgr.py
tests/integration/user_query_guardrail/: test_uqg__call__intgr.py  test_uqg_train_intgr.py
tests/unit/: conftest.py
tests/unit/artifex/: test_artifex_instantiation.py
tests/unit/base_model/: test_base_model_load.py  test_bm_await_data_generation.py  test_bm_build_tokenized_train_ds.py  test_bm_determine_default_device.py  test_bm_generate_synthetic_data.py  test_bm_load.py  test_bm_perform_train_pipeline.py  test_bm_sanitize_output_path.py  test_bm_should_disable_cuda.py  test_bm_tokenize_dataset.py  test_bm_train_pipeline.py
tests/unit/binary_classification_model/: test_bcm_cleanup_synthetic_dataset.py  test_bcm_post_process_synthetic_dataset.py  test_bcm_train.py
tests/unit/classification_model/: test_cm__call__.py  test_cm__init__.py  test_cm_get_data_gen_instr.py  test_cm_load.py  test_cm_load_model.py  test_cm_map_pipeline_label_to_classlabel.py  test_cm_parse_user_instructions.py  test_cm_perform_train_pipeline.py  test_cm_synthetic_to_training_dataset.py  test_cm_train.py
tests/unit/config/: test_config_instantiation.py  test_config_instantiation_unit.py
tests/unit/emotion_detection/: test_ed__init__.py  test_ed_get_data_gen_instr.py
tests/unit/guardrail/: test_gr__call__.py  test_gr__init__.py  test_gr_get_data_gen_instr.py  test_gr_parse_user_instructions.py  test_gr_train.py
tests/unit/intent_classifier/: test_ic__init__.py  test_ic_get_data_gen_instr.py  test_ic_parse_user_instructions.py
tests/unit/llm_output_guardrail/: test_llog__call__.py  test_llog__init__.py  test_llog_get_data_gen_instr.py  test_llog_parse_user_instructions.py  test_llog_train.py
tests/unit/multi_label_classification_model/: test_mlcm__init__.py  test_mlcm_call__.py  test_mlcm_get_data_gen_instr.py  test_mlcm_load_model.py  test_mlcm_parse_user_instructions.py  test_mlcm_perform_train_pipeline.py  test_mlcm_post_process_synthetic_dataset.py  test_mlcm_synthetic_to_training_dataset.py  test_mlcm_train.py
tests/unit/named_entity_recognition/: test_ner__call__.py  test_ner_cleanup_synthetic_dataset.py  test_ner_get_data_gen_instr.py  test_ner_load_model.py  (+6 more)
(+88 files in other folders)
