[build-system]
requires = ["setuptools>=61", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifex"
dynamic = ["version"]
description = "Create your private AI model with no training data or GPUs 🤖🚀."
authors = [
    { name = "Riccardo Lucato", email = "riccardo@tanaos.com" },
    { name = "Saurabh Pradhan" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "datasets>=3.6.0",
    "rich>=14.1.0",
    "synthex>=0.4.2",
    "torch>=2.7.1",
    "transformers[torch]>=4.53.1",
    "tzlocal>=5.3.1",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/tanaos/artifex"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
artifex = ["py.typed"]

[tool.setuptools_scm]
version_file = "artifex/__version__.py"

[dependency-groups]
dev = [
    "ipykernel>=6.16.2",
    "notebook>=6.5.7",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]
