[build-system]
requires = ["setuptools>=61", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifex"
dynamic = ["version"]
description = "Create your private AI model with no training data or GPUs 🤖🚀."
authors = [
    { name = "Riccardo Lucato", email = "riccardo@tanaos.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "aiohttp>=3.13.3",
    "datasets>=3.6.0",
    "filelock>=3.20.3",
    "jupyterlab>=4.4.8",
    "protobuf>=6.33.2",
    "rich>=14.1.0",
    "sentencepiece>=0.2.1",
    "synthex>=0.4.2",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "transformers[torch]>=4.53.1",
    "tzlocal>=5.3.1",
    "urllib3>=2.6.3",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/tanaos/artifex"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
artifex = ["py.typed"]

[tool.setuptools_scm]
version_file = "artifex/__version__.py"

[dependency-groups]
dev = [
    "ipykernel>=6.16.2",
    "notebook>=6.5.7",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]
