[build-system]
requires = ["setuptools>=61", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifex"
dynamic = ["version"]
description = "Small Language Model Inference, Fine-Tuning, Evaluation and Observability."
authors = [
    { name = "Riccardo Lucato", email = "riccardo@tanaos.com" }
]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "aiohttp>=3.13.5",
    "cognitor",
    "datasets>=3.6.0",
    "filelock>=3.20.3",
    "jupyterlab>=4.4.8",
    "nbconvert>=7.17.0",
    "protobuf>=6.33.5",
    "pygments>=2.20.0",
    "rich>=14.1.0",
    "sentencepiece>=0.2.1",
    "synthex>=0.4.2",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "tornado>=6.5.5",
    "transformers[torch]==5.0.0",
    "tzlocal>=5.3.1",
    "urllib3>=2.6.3",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/tanaos/artifex"

[project.optional-dependencies]
evaluation = [
    "scikit-learn>=1.7.2",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
artifex = ["py.typed"]

[tool.setuptools_scm]
version_file = "artifex/__version__.py"

[tool.uv.sources]
cognitor = { path = "cognitor-0.0.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "ipykernel>=6.16.2",
    "notebook>=6.5.7",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]
